# bvp-scraper-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  example_usage.py  pyproject.toml
bvp_scraper/: __init__.py  base_scraper.py  interfaces.py  scraper.py  scraper_core.py
bvp_scraper/scrapers/: __init__.py  odds_scraper.py  preview_scraper.py  program_scraper.py  result_scraper.py  stadium_scraper.py
debug/: debug_scraping.py
debug/program/: check_html.py  debug_selectors.py  test_extraction.py  test_fixed_scraper.py
debug/result/: analyze_valid_result.py  debug_result.py  find_valid_race.py  test_result_scraper.py  test_result_with_kimari.py
examples/: advanced_usage.py  basic_usage.py
tests/: __init__.py  conftest.py  test_base_scraper.py  test_integration.py  test_program_scraper.py  test_scraper.py
